src/test/deca/codegen/valid/extension/arraylit.deca
// Description : Test with random array
// Result : OK. 
{
    int[][] x = {{1,2}, {1,2}};

    int[][][] y = {{{1}, {1}}, {{3}, {5}}};
    int[][][] z = {{{1,2}}, {{1,2}}};
    int[] e = {};
    int[][] f = {};

    x[0][1] = 3;

}