src/test/deca/codegen/invalid/sansObjet/divInt0.deca
// Description : Div by 0 with Int
// Result : Error division by 0
{
    int x = 1;
    int y = 0;
    int z = x/y;
}
